--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
-[build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=41", "setuptools-git-versioning>=2.0,<3"]
 build-backend = "setuptools.build_meta"
+
+
+[tool.setuptools-git-versioning]
+enabled = true
 
 [project]
 name = "ezomero"
