--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
-requires = ["setuptools>=41", "setuptools-git-versioning>=2.0,<3"]
+[build-system]
+requires = ["setuptools>=80", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
-
-[tool.setuptools-git-versioning]
-enabled = true
+[tool.setuptools_scm]
 
 [project]
+
 name = "ezomero"
 dynamic = ["version"]
 maintainers = [
