--- a/.github/workflows/upload_to_pypi.yml
+++ b/.github/workflows/upload_to_pypi.yml
@@ -8,7 +8,8 @@ jobs:
   release:
 
     runs-on: ubuntu-latest
-
+    permissions:
+      id-token: write
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -26,5 +27,4 @@ jobs:
         python -m build
     - name: Publish distribution to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      
